force-app/main/default/objects/custom_create269__c/custom_create269__c.object-meta.xml
<CustomObject>
    <label>Custom created object269</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects269</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>