force-app/main/default/objects/custom_create269__c/fields/custom_create_269field569__c.field-meta.xml
<CustomField>
    <fullName>custom_create_269field569__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 269field569</label>
    <type>Checkbox</type>
</CustomField>